• [Sprinter] range 220 -> 230
• [Abductor] sightdistance 430 -> 520
• [Minelayers] Transportable by basic transport
• [Mines] mincloakdistance 8 -> 30
• [T2 radars] 820 -> 1000 sight, 355 -> 500 health
• [T1 radars] 90 -> 180 health
• [Castro] -13% m/e/bt cost
• [Lightning weapons,except Thor] Firing takes -10e for all, used to vary between -5e to -35e
• [Rez subs] Removed reclaimspeed reduction -> +20% faster reclaim. Matches its usual buildpower now
• [T1 AA ships and frigates] Autoheal removed
• Idleautoheal standardised to 5hp/s after 60 seconds without getting hit, for everything. 
	- Rezbots got a 5hp/s normal autoheal to replace their near-instant idleautoheal.

# January 2026
• [Incisor] 0.767s -> 0.8s reloadtime, 85.5 -> 85 speed, 2200 -> 2300 buildtime, 1040 -> 1100 energycost
• [Blitz, Pawn] 500 -> 600 weaponvelocity
• [Vehicle scouts] +10% reloadtime
• [Banshee, Roughneck] 800 -> 1000 weaponvelocity, 16 -> 40 AoE
• [Hornet] Missile tracks properly
• [T1 bombers] Sprayangle removed, Stormbringer -5 speed
• [Sprinter] 171 -> 160 metalcost, 4140 -> 3800 energycost, 500 -> 600 weaponvelocity
• [Sheldon] 2200 -> 2800 energycost, 410 -> 400 metalcost
• [Fatboy] 6.7333s -> 7s reloadtime, 0.85 -> 0.15 edge effectiveness, 240 -> 300 AoE, 11000 -> 15000 energycost
• [Tzar] 3 -> 3.5 reloadtime, 40.5 -> 39 speed
• [Bull] 60 -> 62 speed
• [Sumo, Battleships] +10% health
• [Spybots] 17600 / 22200 -> 12000 buildtime, change overrides the buildtime formula for them
• [Hound, Gunslinger, Crawling Bombs] buildtime not changed by the formula below
• [Hover platforms] -80m, -750e, -800bt cheaper
• [T1 airplants] -60m, -300bt cheaper
• [T2 constructors] +15% buildpower
• [Seaplane constructors] T2 airplant added to buildlist
• [Construction turrets]
	- Metal cost: 210 -> 230
	- Energy cost: 2600 -> 3200 (floating version)
• [Factory buildpower]
	- All T2 factories: -300 metalcost, 1.5x buildtime. Except Cortex Vehicleplant only -200 metalcost.