@@ -1,7 +1,7 @@
 return {
 	armrecl = {
 		activatewhenbuilt = true,
-		autoheal = 2,
+		autoheal = 5,
 		builddistance = 140,
 		builder = true,
 		buildpic = "ARMRECL.DDS",
@@ -12,7 +12,7 @@ return {
 		collisionvolumeoffsets = "0 0 -5",
 		collisionvolumescales = "38 20 65",
 		collisionvolumetype = "box",
-		energycost = 3000,
+		energycost = 3500,
 		explodeas = "smallexplosiongeneric-uw",
 		footprintx = 3,
 		footprintz = 3,
@@ -21,7 +21,7 @@ return {
 		idletime = 300,
 		maxacc = 0.05262,
 		maxdec = 0.05262,
-		metalcost = 210,
+		metalcost = 240,
 		minwaterdepth = 15,
 		movementclass = "UBOAT4",
 		objectname = "Units/ARMRECL.s3o",
