@@ -1,18 +1,18 @@
 return {
 	correcl = {
 		activatewhenbuilt = true,
-		autoheal = 2,
+		autoheal = 5,
 		builddistance = 140,
 		builder = true,
 		buildpic = "CORRECL.DDS",
-		buildtime = 5960,
+		buildtime = 6200,
 		canassist = false,
 		canmove = true,
 		canresurrect = true,
 		collisionvolumeoffsets = "0 -3 2",
 		collisionvolumescales = "37 25 48",
 		collisionvolumetype = "box",
-		energycost = 3200,
+		energycost = 3500,
 		explodeas = "smallexplosiongeneric-uw",
 		footprintx = 3,
 		footprintz = 3,
@@ -21,7 +21,7 @@ return {
 		idletime = 300,
 		maxacc = 0.05333,
 		maxdec = 0.05333,
-		metalcost = 200,
+		metalcost = 240,
 		minwaterdepth = 15,
 		movementclass = "UBOAT4",
 		objectname = "Units/CORRECL.s3o",
@@ -30,7 +30,7 @@ return {
 		selfdestructas = "smallexplosiongenericSelfd-uw",
 		sightdistance = 300,
 		sonardistance = 150,
-		speed = 66.9,
+		speed = 66,
 		terraformspeed = 2250,
 		turninplace = true,
 		turninplaceanglelimit = 90,
