@@ -10,7 +10,10 @@
 • [T1 radars] 90 -> 180 health
 • [Castro] -13% m/e/bt cost
 • [Lightning weapons,except Thor] Firing takes -10e for all, used to vary between -5e to -35e
-• [Rez subs] Removed reclaimspeed reduction -> +20% faster reclaim. Matches its usual buildpower now
+• [Rez subs] 
+	- Removed reclaimspeed reduction -> +20% faster reclaim. Matches its usual buildpower now
+	- Autoheal 2hp/s -> 5hp/s (lost its idleautoheal of 3hp/s after 10s)
+	- + ~16% energycost, metalcost
 • [T1 AA ships and frigates] Autoheal removed
 • Idleautoheal standardised to 5hp/s after 60 seconds without getting hit, for everything. 
 	- Rezbots got a 5hp/s normal autoheal to replace their near-instant idleautoheal.
